[project]
name = "keytao-bot"
version = "0.1.0"
description = "keytao-bot"
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "nonebot2[fastapi,httpx,websockets]>=2.4.4",
    "nonebot-adapter-telegram>=0.1.0b20",
    "nonebot-adapter-onebot>=2.4.5",
    "openai>=1.12.0",
    "python-socks>=2.8.1",
    "nonebot-plugin-status>=0.9.0",
    "nonebot-plugin-ncm>=1.6.18",
    "nonebot-plugin-auto-emojimix>=0.2.1",
    "nonebot-plugin-github-release-notifier>=0.1.10",
]

[tool.nonebot]
plugin_dirs = []
builtin_plugins = []

[tool.nonebot.adapters]
nonebot-adapter-telegram = [
    { name = "Telegram", module_name = "nonebot.adapters.telegram" },
]
nonebot-adapter-onebot = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" },
]
"@local" = []

[tool.nonebot.plugins]
"@local" = []
nonebot-plugin-status = ["nonebot_plugin_status"]
# nonebot-plugin-ncm = ["nonebot-plugin-ncm"]
nonebot-plugin-auto-emojimix = ["nonebot_plugin_auto_emojimix"]
nonebot-plugin-github-release-notifier = [
    "nonebot_plugin_github_release_notifier",
]
